--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/register.css">
-    <script src = "/js/home/login.js" defer></script>
+    <script src = "/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div class="login-page">
         <div class="form">
             <form class="register-form">
-                <input type="text" placeholder="ID"/>
-                <input type="password" placeholder="password"/>
-                <input type="password" placeholder="password-confirm"/>
-                <input type="text" placeholder="email address"/>
-                <button>create</button>
+                <input id="id", type="text" placeholder="ID"/>
+                <input id="email"type="text" placeholder="email address"/>
+                <input id="psword", type="password" placeholder="password"/>
+                <input id="confirm-psword", type="password" placeholder="password-confirm"/>
+                <p id="button">Sign up</p>
                 <p class="message">Already registered? <a href="/login">Sign In</a></p>
             </form>
         </div>
