--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/home/index.css">
+    <script src = "/js/home/login.js" defer></script>
+    <link data-default-icon="img/home/logoIco.png" rel="icon" sizes="200x2000" href="img/home/logoIco.png">
+    <title>Kado Studio</title>
+
 </head>
 <body>
-    here is the root.
+    <nav class="main-nav">
+        <ul class="main-menu">
+            <img src="img/home/wide_logo.png" alt="Kado Studio Logo" class="logo">
+            <li><a href="#">EssayAssist</a></li>
+            <li><a href="#">AutoLectureNote</a></li>
+            <li><a href="#">Surface</a></li>
+            <li><a href="#">Xbox</a></li>
+            <li><a href="#">Deals</a></li>
+            <li><a href="#">Support</a></li>
+        </ul>
+        <a href="/login" class="login-btn">Login</a >
+    </nav>
 </body>
 </html>
