--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="main-nav">
+        <ul class="main-menu">
+            <img src="img/home/wide_logo.png" alt="Kado Studio Logo" class="logo">
+            <li><a href="#">EssayAssist</a></li>
+            <li><a href="#">AutoLectureNote</a></li>
+            <li><a href="#">Surface</a></li>
+            <li><a href="#">Xbox</a></li>
+            <li><a href="#">Deals</a></li>
+            <li><a href="#">Support</a></li>
+        </ul>
+        <a href="/login" class="login-btn">Login</a >
+    </nav>
     <div class="login-page">
         <div class="form">
             <form class="login-form">
