--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -13,11 +13,12 @@
     <nav class="main-nav">
         <ul class="main-menu">
             <img src="img/home/wide_logo.png" alt="Kado Studio Logo" class="logo">
+            <li><a href="/">Home</a></li>
             <li><a href="#">EssayAssist</a></li>
             <li><a href="#">AutoLectureNote</a></li>
-            <li><a href="#">Surface</a></li>
-            <li><a href="#">Xbox</a></li>
-            <li><a href="#">Deals</a></li>
+            <li><a href="#">ProjectPilot</a></li>
+            <li><a href="#">LearnLinker</a></li>
+            <li><a href="#">IBhelper</a></li>
             <li><a href="#">Support</a></li>
         </ul>
         <a href="/login" class="login-btn">Login</a >
